# sfml_labs

./: README.md
lw1/: ab.cpp  cpp1.1.2.cpp  cpp1.1.cpp  cpp1.2.cpp  cpp1.3.cpp  linear_equation.2.cpp  linear_equation.cpp  square_equation.cpp
lw2/sfml.1/: CMakeLists.txt
lw2/sfml.1/02/: main.cpp
lw2/sfml.1/03/: CMakeLists.txt  main.cpp
lw2/sfml.1/house/: CMakeLists.txt  main.cpp
lw2/sfml.1/myInitials/: CMakeLists.txt  main.cpp
lw2/sfml.1/svetofor/: CMakeLists.txt  main.cpp
lw3/sfml.2/: CMakeLists.txt
lw3/sfml.2/00/: main.cpp
lw3/sfml.2/01/: main.cpp
lw3/sfml.2/02/: main.cpp
lw3/sfml.2/03/: main.cpp
lw3/sfml.2/04/: CMakeLists.txt  main.cpp
lw3/sfml.2/05/: CMakeLists.txt  main.cpp
lw3/sfml.2/sfml.2.1/: CMakeLists.txt  main.cpp
lw3/sfml.2/sfml.2.2/: CMakeLists.txt  main.cpp
lw4/sfml3/: CMakeLists.txt
lw4/sfml3/00/: main.cpp
lw4/sfml3/01/: CMakeLists.txt  main.cpp
lw4/sfml3/02/: CMakeLists.txt  main.cpp
lw4/sfml3/03/: CMakeLists.txt  main.cpp
lw4/sfml3/04/: CMakeLists.txt  main.cpp
lw4/sfml3/05/: CMakeLists.txt  main.cpp
lw4/sfml3/sfml3.1/: CMakeLists.txt  main.cpp
lw4/sfml3/sfml3.2/: CMakeLists.txt  main.cpp
lw4/sfml3/sfml3.3/: CMakeLists.txt  main.cpp
lw5/sfml4/: CMakeLists.txt
lw5/sfml4/sfml4.1/: CMakeLists.txt  main.cpp
lw5/sfml4/sfml4.2/: CMakeLists.txt  main.cpp
lw5/sfml4/sfml4.3/: CMakeLists.txt  main.cpp
lw5/sfml4/sfml4.4/: CMakeLists.txt  main.cpp
